--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/leandrocunha/letsevents#readme",
   "dependencies": {
+    "apollo-boost": "^0.1.16",
+    "graphql": "^14.0.2",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
